# AI_ON_FPGA

./: .gitignore  1_model_train.ipynb  LICENSE  README.md  autoqkeras_cnn_weights.h5  baseline_cnn.history  build.py  callbacks.py  cnn_auto_quant.ipynb  cnn_quant_prune.ipynb  cnn_quantization_prunning.ipynb  envconf.yml  figures.ipynb  iris.ipynb  main.py  mlp_nn2fpga_hls4ml.ipynb  model_conf.yaml  model_utils.py  netron_embed.py  part2_advanced_config.ipynb  part6_cnns.ipynb  pruned_cnn_model.h5  pyproject.toml  quant_utils.py  quantized_cnn.history  quantized_pruned_cnn_model.h5  requirements.txt  reuse_factor_analysis.ipynb  run.py  template_injector.py
ai_on_fpga/: __init__.py  cli.py
ai_on_fpga/boards/: pynq-z2.yaml
ai_on_fpga/config/: default.yaml
config/: config.py
data/: data_pipeline.py
history/: baseline_cnn.history  baseline_cnn_pruned.history  quantized_cnn.history  quantized_cnn_prunned.history  quantized_svhn_kfold.history
hls/: hls_converter.py
models/: baseline_svhn.h5  cnn_model.h5  pruned_cnn_model.h5  quantized_cnn.h5  quantized_cnn_model.h5  quantized_pruned_cnn_model.h5  quantized_svhn.h5
old/: build.py  envconf.yml
quant/: autokeras_utils.py  autoqkeras_utils.py
templates/: build_prj.tcl  build_tb.py  compute_performance.py  golden_preds.py  vivado_synth.tcl  {{ project_name }}_stream.cpp  {{ project_name }}_stream.h  {{ project_name }}_test.cpp
trainer/: trainer.py
utils/: __init__.py  build.py  helpers.py  model_manager.py  nn_utils.py  plotting.py
vhdl/: and3.vhd  cycle_counter.vhd  cycle_counter_wrapper.vhd
(+20 files in other folders)
